<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FlexGrid101</string>
    <string name="gettingStarted">Getting Started</string>
    <string name="columnDefinitions">Column Definitions</string>
    <string name="selectionModes">Selection Modes</string>
    <string name="editing">Editing</string>
    <string name="editConfirm">Edit Confirmation</string>
    <string name="customCells">Custom Cells</string>
    <string name="grouping">Grouping</string>
    <string name="rowDetails">Row Details</string>
    <string name="filter">Filter</string>
    <string name="fullFilter">Full-Text Filter</string>
    <string name="columnLayout">Column Layout</string>
    <string name="conditionalFormatting">Conditional Formatting</string>
    <string name="starSizing">Star Sizing</string>
    <string name="cellFreezing">Cell Freezing &amp; Merging</string>
    <string name="customMerging">Custom Merging</string>
    <string name="onDemand">On Demand</string>
    <string name="newRow">New Row</string>
    <string name="gettingStartedDesc">Display, edit and aggregate your data all at once with FlexGrid</string>
    <string name="columnDefinitionsDesc">Shows how to specify and format columns</string>
    <string name="selectionModesDesc">Shows the various cell selection modes</string>
    <string name="editingDesc">Edit cells by input form rather than inline</string>
    <string name="editConfirmDesc">Shows how to prompt the user with a confirmation dialog before committing changes to a cell</string>
    <string name="customCellsDesc">Customizes a cell by displaying a numeric value in a gauge</string>
    <string name="groupingDesc">Groups and aggregates a collection of videos</string>
    <string name="rowDetailsDesc">Expand and collapse row details.</string>
    <string name="filterDesc">Filters the data by columns through a generated form</string>
    <string name="fullFilterDesc">Filters and highlights the data across all columns</string>
    <string name="columnLayoutDesc">Shows the column manager to modify the column layout</string>
    <string name="conditionalFormattingDesc">Uses a CellFactory to apply conditional formatting</string>
    <string name="starSizingDesc">Shows a responsive column layout that uses star sizing</string>
    <string name="cellFreezingDesc">Shows frozen columns, rows, and cell merging</string>
    <string name="customMergingDesc">Shows a grid with custom cell merging.</string>
    <string name="onDemandDesc">Load items on demand as the user scrolls down the grid</string>
    <string name="newRowDesc">Shows how to edit the new row</string>
    <string name="unbound">Unbound</string>
    <string name="unboundDesc">Add empty rows and columns to create an unbound grid</string>
    <string name="editRow">Edit Row</string>
    <string name="editColumns">Edit Columns</string>
    <string name="id">ID</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="postalCode">Postal Code</string>
    <string name="email">Email</string>
    <string name="active">Active</string>
    <string name="first">First Name</string>
    <string name="last">Last Name</string>
    <string name="actionFilter">Filter</string>
    <string name="actionFilterRemove">Remove Filter</string>
    <string name="actionEditRow">Edit Row</string>
    <string name="confirmEditTitle">Confirm Edit</string>
    <string name="confirmEditDesc">Do you want to commit the edit?</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="moveDown">&#x2193;</string>
    <string name="moveUp">&#x2191;</string>
    <string name="editRowToast">Select a row to edit</string>
    <string name="noInternet">No internet connection available.</string>
    <string name="android">android development</string>
  	<string name="selectFilterTitle">Select Filter</string>
  <string name="groupHeaderFormat">{name}: {value} ({count} items)</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string-array name="detailVisibilityModeSpinnerValues">
        <item>ExpandSingle</item>
        <item>ExpandMultiple</item>
        <item>Selection</item>
    </string-array>
    <string-array name="selectionModeSpinnerValues">
        <item>RowRange</item>
        <item>Row</item>
        <item>CellRange</item>
        <item>Cell</item>
        <item>None</item>
    </string-array>
    <string-array name="filterSpinnerValues">
        <item>Contains</item>
        <item>Equals</item>
        <item>StartsWith</item>
        <item>EndsWith</item>
    </string-array>
<string-array name="youtubeOrderByValues">
        <item>relevance</item>
        <item>date</item>
        <item>viewCount</item>
        <item>rating</item>
        <item>title</item>
    </string-array>
</resources>