<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/idText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/id"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" >
            </TextView>

            <TextView
                android:id="@+id/idValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" >
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/nameText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/name"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" >
            </TextView>

            <EditText
                android:id="@+id/nameValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:inputType="textPersonName" >
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/addressText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/address"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" >
            </TextView>

            <EditText
                android:id="@+id/addressValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:inputType="textPostalAddress" >
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/cityText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/city"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" >
            </TextView>

            <EditText
                android:id="@+id/cityValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:inputType="textPersonName" >
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/countryText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/country"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" >
            </TextView>

            <Spinner
                android:id="@+id/countryValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7" >
            </Spinner>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/postalCodeText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/postalCode"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" >
            </TextView>

            <EditText
                android:id="@+id/postalCodeValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:inputType="number" >
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/activeText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/active"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" >
            </TextView>

            <CheckBox
                android:id="@+id/activeValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/save" />

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/cancel" />
        </TableRow>
    </TableLayout>

</ScrollView>