<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/firstNameTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/first"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" >
            </TextView>

            <Spinner
                android:id="@+id/firstNameSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4" />

            <EditText
                android:id="@+id/firstNameEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:inputType="text" >
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lastNameTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/last"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" >
            </TextView>

            <Spinner
                android:id="@+id/lastNameSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4" />

            <EditText
                android:id="@+id/lastNameEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:inputType="text" >
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/addressTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/address"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" >
            </TextView>

            <Spinner
                android:id="@+id/addressSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4" />

            <EditText
                android:id="@+id/addressEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:inputType="text" >
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/cityTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/city"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" >
            </TextView>

            <Spinner
                android:id="@+id/citySpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4" />

            <EditText
                android:id="@+id/cityEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:inputType="text" >
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/postalCodeView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/postalCode"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" >
            </TextView>

            <Spinner
                android:id="@+id/postalCodeSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4" />

            <EditText
                android:id="@+id/postalCodeEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:inputType="number" >
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/emailView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/email"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" >
            </TextView>

            <Spinner
                android:id="@+id/emailSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:inputType="textEmailAddress" >
            </EditText>
        </TableRow>
        
         <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <Button
                android:id="@+id/filterButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/filter" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/cancel" />
        </TableRow>
    </TableLayout>

</ScrollView>